Fixed box shadow overlapping

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -15,9 +15,10 @@
 html{ overflow:scroll;
 
 }
-body{ background: image-url("bg_tile.jpg");
+body{
+
+    background: image-url("bg_tile.jpg");
 }
-ul{ list-style:none;  }
 
 hr{
     border-top:1px dashed #b9aea0;
@@ -30,15 +31,10 @@ hr{
 a{ text-decoration:none; }
 p{ color:#4b433b; font-family:Verdana; font-size:14px; }
 
-/* end GENERALS ------------------------------------------------------------------*/
-
-
-/* font-family: 'Montserrat', sans-serif; */
-/* font-family: 'Homenaje', sans-serif; */
-
 label{
     margin-right: 5px;
 }
+
 textarea{
     display:block;
     height: 150px;
@@ -59,9 +55,9 @@ textarea{
 .floatleft{ float:left; }
 .floatright{ float:right; }
 
-.large{ font-size: 1.2em};
-.medium{ font-size: 0.97em};
-.small{ font-size: 0.67em};
+.large{ font-size: 1.2em };
+.medium{ font-size: 0.97em };
+.small{ font-size: 0.67em !important };
 
 .readable{
     line-height: 1.17em;
@@ -74,26 +70,47 @@ textarea{
     width: 100%;
     height: 60px;
     background: white;
-    -webkit-box-shadow: 0px 1px 4px 0 rgba(165, 165, 165, 0.6);
-    box-shadow: 0px 1px 7px 0 rgba(165, 165, 165, 0.6);
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0px;
+        left: 0; right: 0;
+        -webkit-box-shadow: 0px 1px 4px 0 rgba(165, 165, 165, 0.6);
+        box-shadow: 0px 2px 7px 1px rgba(165, 165, 165, 0.6);
+        height: 60px;
+    }
+
     #links{
         width: 960px;
         margin: 0 auto;
 
         a{
-            line-height: 3.0em;
+            line-height: 2.8em;
             display: inline-block;
-            font-size: 1.2em;
-            font-family: georgia;
-
-          //  vertical-align: -webkit-baseline-middle;
+            font-size: 1.3em;
+            letter-spacing: -0.03em;
+            font-family: "Lucida Sans Unicode",Verdana;
+            color: rgb(66, 65, 65);
+            text-shadow: 0 1px 1px #DDD;
         }
     }
 
     #account{
         margin-top: -2px;
         float: right;
+        span{
+            font-size: 1.2rem;
+        }
     }
+}
+.content{
+    width:980px;
+    margin:0 auto;
+    border-right: 1px solid rgb(185, 183, 183);
+    border-left: 1px solid rgb(185, 183, 183);
+    padding: 20px;
+    background: white;
 }
 
 #notifications{
@@ -109,6 +126,7 @@ textarea{
         font-weight: bold;
     }
 }
+
 #footer{
     padding: 20px 0px;
     width: 100%;
@@ -119,17 +137,6 @@ textarea{
 }
 
 
-.page_wrap{ width:980px; margin:0 auto; }
-
-.main_content{
-    width:940px;
-    padding:20px 20px 0 20px;
-    background: #ece8d7;
-    border: 3px solid #b9aea0;
-    float:left;
-
-    @include rounded(10px);
-}
 
 .link_button{
     width: 100px;
@@ -202,22 +209,6 @@ textarea{
     -webkit-transition: all 0.2s ease;
 }
 
-.large_pathfinder_logo{
-    margin:20px 0 0 310px;
-    margin: 0 auto;
-    height:400px;
-    width:313px;
-    background:image-url("big_pathfinder_logo.png");
-}
-
-.large_gls_logo{
-    margin:20px 0 0 310px;
-    margin: 0 auto;
-    height:400px;
-    width:313px;
-}
-
-
 .AcceptDecline_container { width:100%; float:left; }
 .AcceptDecline{ float:left; margin-left:370px; }
         .AcceptDecline li{ float:left; display:inline; margin:0 0 20px 5px; -webkit-transition: all 0.2s ease;}
@@ -286,64 +277,9 @@ textarea{
 }
 
 .login_container{
-    float:left;
     width: 100%;
 }
 
-.field_with_errors #user_login,
-.field_with_errors #user_password,
-.field_with_errors #user_password_confirmation
-{
-    border:3px solid #e16161;
-    float:left;
-}
-
-.error_list{ list-style:disc; }
-    .error_list li{
-        color:#e16161;
-        margin:10px 0 10px 35px;
-    }
-
-#error_explanation h4{ font-family: georgia; color:#e16161;}
-
-.error_container{
-    width: 610px;
-}
-
-.error{
-    border:3px solid #e16161;
-    padding: 2px;
-   @include rounded(2px);
-}
-
-.error_box{
-    margin:5px;
-    width: 650px;
-    padding: 8px;
-    border:3px solid #e16161;
-    background: #fffef6;
-    font-family:georgia;
-    color:#bb7b4b;
-    font-size:16px;
-
-    @include rounded(10px);
-
-    clear: left;
-
-    .error_img{
-        width: 25px;
-        height: 25px;
-        display: inline-block;
-
-        background: image-url("pf_control_sprite.png") no-repeat -29px -122px;
-    }
-
-    #notice{
-        margin-bottom: 6px;
-        display: inline-block;
-        vertical-align:text-bottom;
-    }
-}
 
 /*      Games       */
 
@@ -397,7 +333,6 @@ textarea{
 .game{
     margin: 0 auto;
     margin-top: 10px;
-    margin-right: 10px;
     padding-top: 20px;
 }
 
